# promql-agent

./: .env.example  .gitignore  AGENTS.md  README.md  cli.py  pyproject.toml
.claude/: settings.json
backend/: .env.example  .gitignore  README.md  cli.py  comprehensive_websocket_test.py  main.py  pyproject.toml  quick_websocket_test.py  requirements.txt  streaming_client_example.py  test_audio_streaming.py  test_proper_audio.py  test_questions.py  test_speech_to_text.py  test_websocket.py
backend/app/: main.py
backend/app/agents/: sre_agent.py
backend/app/models/: request_models.py
backend/app/routes/: azure_speech_streaming.py  sre.py
backend/app/services/: azure_speech_service.py  llm_service.py
backend/app/tools/: __init__.py  prometheus_client.py  sre_tools.py  sre_tools_backup.py  sre_tools_new.py
backend/docs/postman/: AegisNexus-SRE-API.postman_collection.json  QUICK_START.md  README.md  development.postman_environment.json  production.postman_environment.json  staging.postman_environment.json  test_api.sh
backend/tests/: test_main.py  test_sre_agent.py  test_sre_tools.py  test_sre_tools_manual.py
backend/tests/speech/: README.md  __init__.py  compare_methods.py  enhanced_speech_demo.py  quick_start.py  run_all_tests.py  run_tests_with_uv.py  test_direct_speech_to_text.py  test_websocket_speech_to_text.py
demo-grafana-promethues-forked-edited/: Dockerfile.k6  README.md  docker-compose.yaml  test-all-discord-alerts.sh  test-discord-alerts.sh
frontend/: README.md  SETUP_SUMMARY.md  package-lock.json  package.json  pnpm-lock.yaml  (+1 more)
(+79 files in other folders)
